--- a/reference/RAG3_frontend/front-end/src/index.css
+++ b/reference/RAG3_frontend/front-end/src/index.css
@@ -1,13 +1,39 @@
 @tailwind base;
 *::-webkit-scrollbar-track {
-    background: var(--primary);
+    background: #f5f5f7;
     border-radius: 5px;
   }
   
   *::-webkit-scrollbar-thumb {
-    background-color: var(--secondary);
+    background-color: #86868b;
     border-radius: 14px;
-    border: 3px solid var(--primary);
+    border: 3px solid #f5f5f7;
   }
+
+@font-face {
+  font-family: 'SF Pro Display';
+  src: url('/fonts/SF-Pro-Display-Regular.otf') format('opentype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'SF Pro Display';
+  src: url('/fonts/SF-Pro-Display-Medium.otf') format('opentype');
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'SF Pro Display';
+  src: url('/fonts/SF-Pro-Display-Bold.otf') format('opentype');
+  font-weight: bold;
+  font-style: normal;
+}
+
+html {
+  font-family: 'SF Pro Display', -apple-system, BlinkMacSystemFont, sans-serif;
+}
+
 @tailwind components;
 @tailwind utilities;
